--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -16,7 +16,7 @@ jobs:
         uses: goanpeca/setup-miniconda@v1
         with:
            activate-environment: cogent3
-           environment-file: tib/tib-enf.yml
+           environment-file: tib-enf.yml
            python-version: 3.8
 
       - shell: bash -l {0}
