GH action debug file locations

--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -12,6 +12,11 @@ jobs:
         with:
            path: tib
 
+      - shell: bash -l {0}
+        run: |
+          echo pwd
+          ls .
+
       - name: Make conda environment
         uses: goanpeca/setup-miniconda@v1
         with:
