--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -14,14 +14,14 @@ jobs:
 
       - shell: bash -l {0}
         run: |
-          echo pwd
+          pwd
           ls tib/
 
       - name: Make conda environment
         uses: goanpeca/setup-miniconda@v1
         with:
            activate-environment: cogent3
-           environment-file: tib/tib-enf.yml
+           environment-file: tib-enf.yml
            python-version: 3.8
 
       - shell: bash -l {0}
