fix working dir for making docs

--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Build docs
         shell: bash -l {0}
-        working-directory: tib/source
+        working-directory: tib
         run: |
           conda activate tib
           make github
