--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -26,6 +26,8 @@ jobs:
         run: |
           python3 -m venv ~/env-tib
           source ~/env-tib/bin/activate
+          echo `pwd`
+          echo `ls`
           python3 -m pip install -r requirements.txt
 
       - name: Build docs
