DEV: pin specific versions of dependencies
NOTE: using a more recent Sphinx breaks formatting of sections,
I presume due to a name change in templates? Not investigated as I don't have time.

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,14 +7,16 @@ ipykernel
 ipywidgets
 ipytest
 jupyter-sphinx
-pytest
-tqdm>=4.47.0
-sphinx==3.5.4
 nbsphinx
+pytest
+sphinx==3.5.4
+jinja2==3.0.3
+sphinx_comments
 sphinx_panels
-nbformat
-nbconvert!=5.4
 sphinxcontrib-bibtex
 sphinx_rtd_theme
+tqdm>=4.47.0
+nbformat
+nbconvert!=5.4
 pandas
 git+https://github.com/cogent3/cogent3.git@develop#egg=cogent3[develop]
