--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,13 @@ pytest
 sphinx==3.5.4
 docutils<0.17
 jinja2==3.0.3
+scipy
 sphinx_comments
 sphinx_panels
 sphinxcontrib-bibtex
 sphinx_rtd_theme
 tqdm>=4.47.0
 nbformat
-nbconvert>=6.3
+nbconvert==5.6.1
 pandas
 git+https://github.com/cogent3/cogent3.git@develop#egg=cogent3[develop]
