--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Install graphviz
         run: |
          sudo apt-get update -y
-         sudo apt-get install -y graphviz
+         sudo apt-get install -y graphviz pandoc
 
       - uses: actions/checkout@v2
         with:
@@ -29,6 +29,13 @@ jobs:
           python3 -m venv ~/env-tib
           source ~/env-tib/bin/activate
           python3 -m pip install -r requirements.txt
+
+      - name: Show installed
+        shell: bash -l {0}
+        working-directory: tib
+        run: |
+          source ~/env-tib/bin/activate
+          pip freeze
 
       - name: Build docs
         shell: bash -l {0}
