--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ ipython
 ipykernel
 ipywidgets
 ipytest
+jupyter_client==6.1.12
 jupyter-sphinx
 nbsphinx
 ipython_genutils
@@ -22,4 +23,5 @@ tqdm>=4.47.0
 nbformat
 nbconvert==5.6.1
 pandas
+pandoc
 git+https://github.com/cogent3/cogent3.git@develop#egg=cogent3[develop]
