DEV: added noxfile for building and testing docs

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,22 +6,24 @@ ipython
 ipykernel
 ipywidgets
 ipytest
-jupyter_client==6.1.12
+jupyter_client
 jupyter-sphinx
 nbsphinx
 ipython_genutils
 pytest
-sphinx==3.5.4
-docutils<0.17
-jinja2==3.0.3
+sphinx
+docutils
+jinja2<3.1
 scipy
+sphinx==5.3.0
 sphinx_comments
-sphinx_panels
+sphinx_design
 sphinxcontrib-bibtex
 sphinx_rtd_theme
 tqdm>=4.47.0
 nbformat
-nbconvert==5.6.1
+nbconvert
 pandas
 pandoc
+nox
 git+https://github.com/cogent3/cogent3.git@develop#egg=cogent3[develop]
